--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "axios": "^1.2.3",
     "eslint": "^8.0.1",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-router-dom": "^6.7.0",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
   },
