--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "^6.7.0",
     "react-toastify": "^9.1.1",
