--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.42.1",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
