--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
+    "@mui/x-data-grid": "^5.17.22",
     "axios": "^1.2.3",
     "eslint": "^8.0.1",
     "eslint-plugin-import-helpers": "^1.3.1",
