--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
+    "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
